--- a/css/stye.css
+++ b/css/stye.css
@@ -78,7 +78,6 @@ html {
   }
 }
 .header {
-  background: #fff;
   position: fixed;
   margin: 0 auto;
   width: 100%;
@@ -136,9 +135,15 @@ html {
   margin-left: 20px;
   display: block;
 }
-@media (max-width: 767px) {
+@media (max-width: 460px) {
   .header body.lock {
     overflow: hidden;
+  }
+  .header .header {
+    background: transparent;
+  }
+  .header .header__container {
+    background: transparent;
   }
   .header .menu__list {
     overflow: auto;
@@ -170,6 +175,7 @@ html {
     -webkit-box-pack: end;
         -ms-flex-pack: end;
             justify-content: flex-end;
+    margin-top: 65px;
   }
   .header .header__burger {
     display: block;
@@ -259,9 +265,14 @@ html {
       -ms-flex-align: center;
           align-items: center;
 }
-@media (max-width: 767px) {
+@media (max-width: 370px) {
   #home .home__text {
     display: block;
+  }
+}
+@media (max-width: 460px) {
+  #home .home__text {
+    margin-top: 65px;
   }
 }
 #home .home__title {
