--- a/css/stye.css
+++ b/css/stye.css
@@ -13,6 +13,10 @@
   padding: 0;
 }
 
+img {
+  width: 100%;
+}
+
 body {
   color: #000;
   font-size: 20px;
@@ -51,10 +55,6 @@ html {
           flex: 0 1 auto;
 }
 
-.wrapper._active {
-  background-color: rgb(188, 242, 242);
-}
-
 .title {
   font-size: 34px;
   color: #000;
@@ -66,7 +66,7 @@ html {
 [class*=__container] {
   max-width: 950px;
   margin: 0 auto;
-  padding: 0 15px;
+  padding: 0 15px 0;
 }
 
 @media (max-width: 1050px) {
@@ -87,160 +87,193 @@ html {
 }
 .header {
   position: fixed;
-  margin: 0 auto;
-  line-height: 70px;
   width: 100%;
-  z-index: 100;
+  top: 0;
+  left: 0;
+  z-index: 50;
   background-color: #fff;
 }
-.header .header__container {
+
+.header:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+  z-index: 2;
+}
+
+.header__body {
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin: 0 auto;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: 80px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
-.header .header__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+
+.header__logo {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 60px;
+          flex: 0 0 60px;
+  border-radius: 50%;
+  overflow: hidden;
+  position: relative;
+  z-index: 3;
 }
-.header .header__link {
-  font-size: 16px;
-  text-decoration: none;
-  color: rgb(97, 80, 80);
+
+.header__logo img {
+  max-width: 100%;
+  display: block;
 }
-.header .header__list li {
-  cursor: pointer;
-  line-height: 90px;
-  padding: 0 10px;
-  font-weight: 700;
-}
-.header .header__list li:hover {
-  background-color: #F6F6F6;
-  -webkit-transition: all 0.5s;
-  transition: all 0.5s;
-}
-.header .header__burger {
+
+.header__burger {
   display: none;
 }
-.header .header__list {
+
+.header__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   position: relative;
   z-index: 2;
 }
-.header .header__list li {
+
+.header__list li {
   list-style: none;
+  margin: 0px 0px 0px 20px;
 }
-.header .header__list li a {
+
+.header__link {
+  color: #828282;
   text-transform: uppercase;
-  font-size: 16px;
+  font-size: 18px;
   text-decoration: none;
-  color: #fff;
-  margin-left: 20px;
 }
-.header .header__row {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+.header__link:hover {
+  color: #000;
+  font-weight: 700;
 }
-@media (max-width: 767px) {
-  .header body.lock {
+
+@media (max-width: 580px) {
+  body.lock {
     overflow: hidden;
   }
-  .header .header {
+
+  .header {
     background-color: transparent;
   }
-  .header .header__row {
-    display: block;
-  }
-  .header .header__container {
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-  }
-  .header .header__body {
+
+  .header__body {
     height: 50px;
   }
-  .header .header__row {
-    display: block;
+
+  .header__logo {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 40px;
+            flex: 0 0 40px;
   }
-  .header .header__burger {
+
+  .header__burger {
     display: block;
+    float: right;
     position: relative;
     width: 30px;
     height: 20px;
-    z-index: 4;
-    top: 55px;
+    z-index: 3;
+    right: 30px;
   }
-  .header .header__burger::before,
-.header .header__burger::after {
-    content: "";
+
+  .header__burger span {
+    position: absolute;
     background-color: #000;
     position: absolute;
-    width: 30px;
-    height: 2px;
-    right: 0;
+    left: 0;
+    width: 100%;
+    height: 3px;
+    top: 9px;
     -webkit-transition: all 0.3s ease 0s;
     transition: all 0.3s ease 0s;
   }
-  .header .header__burger::before {
+
+  .header__burger:before,
+.header__burger:after {
+    content: "";
+    background-color: #000;
+    position: absolute;
+    width: 100%;
+    height: 3px;
+    left: 0;
+    -webkit-transition: all 0.3s ease 0s;
+    transition: all 0.3s ease 0s;
+  }
+
+  .header__burger:before {
     top: 0;
   }
-  .header .header__burger::after {
+
+  .header__burger:after {
     bottom: 0;
   }
-  .header .header__burger.active span {
+
+  .header__burger.active span {
     -webkit-transform: scale(0);
             transform: scale(0);
   }
-  .header .header__burger.active::before {
+
+  .header__burger.active:before {
     -webkit-transform: rotate(45deg);
             transform: rotate(45deg);
     top: 9px;
   }
-  .header .header__burger.active::after {
+
+  .header__burger.active:after {
     -webkit-transform: rotate(-45deg);
             transform: rotate(-45deg);
     bottom: 9px;
   }
-  .header .header__burger span {
-    position: absolute;
-    background-color: #000;
-    position: absolute;
-    width: 30px;
-    height: 2px;
-    left: 0;
-    top: 9px;
-    -webkit-transition: all 0.3s ease 0s;
-    transition: all 0.3s ease 0s;
-  }
-  .header .header__menu {
+
+  .header__menu {
     position: fixed;
-    top: 0;
+    top: -100%;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #fff;
+    overflow: auto;
     -webkit-transition: all 0.3s ease 0s;
     transition: all 0.3s ease 0s;
+    background-color: #fff;
     padding: 70px 10px 20px 10px;
-    top: -100%;
-    overflow: auto;
   }
-  .header .header__menu.active {
+
+  .header__menu.active {
     top: 0;
   }
-  .header .header__list {
+
+  .header__list {
     display: block;
   }
-  .header .header__list li {
-    margin: 0 0 0 0;
-    font-size: 26px;
+
+  .header__list li {
+    margin: 0px 0px 20px 0px;
+  }
+
+  .header__link {
+    font-size: 42px;
+    font-weight: 700;
+    line-height: 2;
   }
 }
-
 #home {
   background-color: #fff;
   padding: 120px 0 0;
@@ -303,6 +336,7 @@ html {
 }
 #home img {
   margin-bottom: 105px;
+  width: 100%;
 }
 @media (max-width: 370px) {
   #home .home__img-lg-md {
@@ -406,6 +440,12 @@ html {
 }
 #contacts .contacts__local-items {
   margin-bottom: 45px;
+  max-height: 80px;
+}
+#contacts .contacts__local-items img {
+  height: 50px;
+  width: 310px;
+  height: 42px;
 }
 #contacts .contacts__local-item {
   cursor: pointer;
